--- a/_posts/welcome/covid-19 in Honduras.Rmd
+++ b/_posts/welcome/covid-19 in Honduras.Rmd
@@ -11,6 +11,8 @@ output:
     self_contained: false
 categories:
   - COVID-19
+bibliography: references.bib
+biblio-style: authoryear-comp
 ---
 
 ```{r setup, include=FALSE}
@@ -185,4 +187,26 @@ Table \@ref(fig:t3) shows weekly cumulative cases in Honduras. In this table it 
 In general, at present the situation in Honduras tends to be stable, there is no surge, but the situation is not getting better. The low recovery rate is a big problem in Honduras.
 
 
+# References
+
+Thanks for the providers of these packages used as follows:
+
+
+- coronavirus [@coronavirus]
+
+- plotly [@plotly]
+
+- tidyverse [@tidyverse]
+
+- lubridate [@lubridate] 
+
+- kableExtra [@kableExtra]
+
+- DT [@DT]
+
+- knitr [@knitr]
+
+- ggplot2 [@ggplot2]
+
+- sparkline [@sparkline]
 
